// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStyled() can access the ref from multiple layers of composition 1`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef>
          <ForwardRef className=\\"\\">
            <ForwardRef className=\\"\\">
              <ForwardRef className=\\"\\">
                <main ref={mockConstructor()} className=\\"\\" />
              </ForwardRef>
            </ForwardRef>
          </ForwardRef>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() can pass custom props/attributes 1`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef
          className=\\"will-be-appended\\"
          placeholder=\\"Search...\\"
          type=\\"text\\"
        >
          <input
            className=\\"a b c will-be-appended\\"
            placeholder=\\"Search...\\"
            type=\\"text\\"
          />
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() can pass custom props/attributes 2`] = `".a {border: 1px solid black;}.b {padding: 1rem;}.c:focus {outline: none;}"`;

exports[`createStyled() can use and define CSS variables 1`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef>
          <code className=\\"a b\\" />
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() can use and define CSS variables 2`] = `".a {font-size: var(--text-sm-size);}.b {line-height: 1.25;}"`;

exports[`createStyled() creates and renders a button with defined styles 1`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef>
          <button className=\\"a b c\\">
            Test
          </button>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() creates and renders a button with defined styles 2`] = `".a {display: inline-flex;}.b {text-align: center;}.c {padding: 1rem;}"`;

exports[`createStyled() only renders styles once, even when component rerenders 1`] = `
"<Wrapper theme=\\"day\\">
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"day\\">
        <ForwardRef href=\\"/foo/bar\\">
          <a className=\\"a\\" href=\\"/foo/bar\\">
            Test
          </a>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() only renders styles once, even when component rerenders 2`] = `".a {text-decoration: none;}"`;

exports[`createStyled() supports styled component composition 1`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef type=\\"button\\">
          <button className=\\"a b c\\" type=\\"button\\">
            Normal
          </button>
        </ForwardRef>
        <ForwardRef type=\\"submit\\">
          <ForwardRef className=\\"d e\\" type=\\"submit\\">
            <button className=\\"a b c d e\\" type=\\"submit\\">
              Block
            </button>
          </ForwardRef>
        </ForwardRef>
        <ForwardRef disabled>
          <ForwardRef disabled className=\\"f g\\">
            <ForwardRef disabled className=\\"d e f g\\">
              <button disabled className=\\"a b c d e f g\\">
                Large
              </button>
            </ForwardRef>
          </ForwardRef>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() supports styled component composition 2`] = `".a {display: inline-flex;}.b {text-align: center;}.c {padding: 1rem;}.d {display: flex;}.e {width: 100%;}.f {padding: 2rem;}.g {font-size: 18px;}"`;

exports[`createStyled() supports variants 1`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef palette=\\"success\\">
          <div className=\\"a b\\" palette=\\"success\\">
            <div>
              <h1>Title</h1>
              And other content!
            </div>
          </div>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() supports variants 2`] = `".a {background: var(--palette-neutral-bg-base);}.b {background: var(--palette-success-bg-base);}.c {background: var(--palette-failure-bg-base);}.d {background: var(--palette-warning-bg-base);}"`;

exports[`createStyled() supports variants 3`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef palette=\\"failure\\">
          <div className=\\"a c\\" palette=\\"failure\\">
            <div>
              <h1>Title</h1>
              And other content!
            </div>
          </div>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;

exports[`createStyled() supports variants 4`] = `
"<Wrapper>
  <DirectionProvider direction=\\"ltr\\" wrapper={<div />}>
    <div dir=\\"ltr\\">
      <ThemeProvider name=\\"twilight\\">
        <ForwardRef>
          <div className=\\"a\\">
            <div>
              <h1>Title</h1>
              And other content!
            </div>
          </div>
        </ForwardRef>
      </ThemeProvider>
    </div>
  </DirectionProvider>
</Wrapper>"
`;
